<resources>
    <string name="app_name">Mazda</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="find_us">Find Us</string>
    <string name="mazda_club">Mazda Club</string>
    <string name="car_details">View Car Details</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="book_now">Book Now</string>
    <string name="trade_in">Trade In</string>
    <string name="drive_finance">Drive Finance</string>
    <string name="test_drive">Test Drive</string>
    <string name="show_room">Show Room</string>
    <string name="overview">OverView</string>
    <string name="specification">Specification</string>
    <string name="after_sales_service">After Sales Services</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="fixology">Fixology</string>
    <string name="service_360">360</string>
    <string name="finance">Drive Finance</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Mobile Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="select_date">Select Date</string>
    <string name="kilometers">KiloMeters</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="already_have_account">Already have account</string>
    <string name="gotham_regular">Gotham-Book.otf</string>
    <string name="gotham_semi_bold">Gotham-Medium.otf</string>
    <string name="gotham_bold">Gotham-Bold.otf</string>
    <string name="get_direction">Get Directions</string>
    <string name="showrooms">Showrooms</string>
    <string name="dealers">Dealers</string>
    <string name="spare_parts_outlets">Spare Parts Outlets</string>
    <string name="service_centers">Service Centers</string>
    <string name="available_in_stock">Available in stock</string>
    <string name="model_year_trim">Model . Year . Trim</string>
    <string name="request_spare_part">Request Spare Part</string>
    <string name="national_id_number">National ID Number</string>
    <string name="national_id_images">National ID Front &amp; Back Image</string>
    <string name="your_car_model">Your Car Model</string>
    <string name="car_color">Car Color</string>
    <string name="year">Year</string>
    <string name="chassis">Chassis</string>
    <string name="motor">Motor</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="question_mark">\?</string>
    <string name="forget_password_question">Forget password ?</string>
    <string name="join_now">Join Now</string>
    <string name="enter_first_name">Please Enter Your First Name</string>
    <string name="enter_last_name">Please Enter Your Last Name</string>
    <string name="enter_user_name">Please Enter Your User Name</string>
    <string name="enter_email_address">Please Enter Your E-Mail Address</string>
    <string name="enter_phone_number">Please Enter Your Phone Number</string>
    <string name="enter_address">Please Enter Your Address</string>
    <string name="enter_activation_code">Please Enter Activation Code</string>
    <string name="pick_birth_date">Please Pick Your BirthDate</string>
    <string name="pick_date">Please Pick The Date</string>
    <string name="enter_valid_email_address">Please Enter Valid E-Mail Address</string>
    <string name="enter_city">Please Enter Your City</string>
    <string name="enter_subject">Please Enter Subject</string>
    <string name="enter_message">Please Enter Message</string>
    <string name="enter_password">Please Enter Your Password</string>
    <string name="enter_confirm_password">Please Confirm Your Password</string>
    <string name="password_mismatch">Password and confirm password mismatch</string>
    <string name="enter_chassis">Please Enter Your Chassis</string>
    <string name="enter_motor">Please Enter Your Motor</string>
    <string name="enter_national_id">Please Enter Your National ID</string>
    <string name="please_choose_national_id">Please Pick Your National ID Front &amp; Back Image</string>
    <string name="please_choose_car_model">Please Choose Car Model</string>
    <string name="please_choose_car_year">Please Choose Car Year</string>
    <string name="please_choose_car_trim">Please Choose Car Trim</string>
    <string name="please_choose_car_color">Please Choose Car Color</string>
    <string name="choose_car_model">Choose Car Model</string>
    <string name="choose_car_year">Choose Car Year</string>
    <string name="choose_location">Select Location</string>
    <string name="choose_car_trim">Choose Car Trim</string>
    <string name="choose_car_color">Choose Car Color</string>
    <string name="please_choose_spare_part_outlet">Please Choose Spare Part Outlet</string>
    <string name="please_choose_spare_part_type">Please Choose Spare Part Type</string>
    <string name="please_choose_spare_part">Please Choose Spare Part</string>
    <string name="please_choose_nearest_showroom">Please Choose Nearest Show Room</string>
    <string name="please_choose_city">Please Choose City</string>
    <string name="car_booked">Car booked successfully</string>
    <string name="spar_part_requested">Spare Part Requested successfully</string>
    <string name="nearest_branch">Nearest branch</string>
    <string name="branch">Branch</string>
    <string name="city">City</string>
    <string name="spare_part_category">Spare Part Types</string>
    <string name="spare_part">Spare Parts</string>
    <string name="description">Spare Part Description</string>
    <string name="send_request">Send Request</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="camera">Camera</string>
    <string name="pick_picture">Pick Picture From</string>
    <string name="activate">Activate</string>
    <string name="activation">Activation</string>
    <string name="activation_code">Activation Code</string>
    <string name="find">Find</string>
    <string name="nearest_service_center">The Nearest Service Center</string>
    <string name="call">Call</string>
    <string name="service_center_hot_line">Service Center HotLine</string>
    <string name="welcome">WELCOME</string>
    <string name="gas_stations">Near by ATMs &amp; Gas Stations</string>
    <string name="done">Done</string>
    <string name="currency">%s L.E.</string>
    <string name="programs">Programs</string>
    <string name="national_id_constraint">Enter 14 digit for National ID</string>
    <string name="password_limit">Password cannot be less than 6 characters</string>
    <string name="to">TO</string>
    <string name="dash">%s - %s</string>
    <string name="select_city">Select city</string>
    <string name="have_to_login">Please login to proceed</string>
    <string name="nearest_showrom">Nearest show room</string>
    <string name="confirmed">Confirmed</string>
    <string name="thanks_for_reserving">Thank you for reserving with us</string>
    <string name="about_us">About Us</string>
    <string name="language">Language</string>
    <string name="calculate">Calculate</string>
    <string name="interested">Interested</string>
    <string name="log_out">Log out</string>
    <string name="periodic">Periodic &amp; Mechanical</string>
    <string name="maintenance">Maintenance &amp; Body</string>
    <string name="about_fixology">About Fixology</string>
    <string name="about_check_social">CHECK OUT OUR SOCIAL MEDIA</string>
    <string name="calculator">Calculator</string>
    <string name="original_price">Original price</string>
    <string name="monthly_installment">Monthly installment</string>
    <string name="down_payment">Down Payment</string>
    <string-array name="number_of_years">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="program">Program</string>
    <string name="down_payment_message_1">Down payment cannot be less than 20% of original price</string>
    <string name="down_payment_message_2">Down payment cannot greater than original price</string>
    <string name="choose_program">Please select the program</string>
    <string name="choose_number_of_years">Please select number of years</string>
    <string name="enter_down_payment">Please Enter Down Payment Amount</string>
    <string name="enter_valid_amount">Enter A Valid Amount</string>
    <string name="choose_service">Choose service type</string>
    <string name="periodic_type">Periodic</string>
    <string name="mechanical_type">Mechanical</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="your_car_brand">Your Car Brand</string>
    <string name="requested_car_brand">Requested Car Brand</string>
    <string name="requested_car_model">Requested Car Model</string>
    <string name="fabrica_description">
        Egypt’s first Multi brand service to Buy, Sell, &amp; Trade-in Pre-owned Cars\n\nLooking to sell or trade-in your used car with a new Mazda?\n\nFill the following form and you will be contacted shortly by Fabrika’s team.</string>
    <string name="golden_tier">Golden Tier</string>
    <string name="blue_tier">Blue Tier</string>
    <string name="labor_cost">Labor Cost</string>
    <string name="fabrika">Fabrika</string>
    <string name="from_total_loan">From total loan</string>
    <string name="services_360">360 Services</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="exp_date">Exp.Date</string>
    <string name="model">Model: %s</string>
    <string name="color">Color: %s</string>
    <string name="chassis_number">Chassis: %s</string>
    <string name="motor_number">Motor: %s</string>
    <string name="my_car_details">My Car Details</string>
    <string name="car_history">Car History</string>
    <string name="profile">Profile</string>
    <string name="edit_car_details">Edit Car Details</string>
    <string name="my_car">My Car</string>
    <string name="data_updated">Data updated successfully</string>
    <string name="add_comment">Add your comments</string>
    <string name="please_add_comment">Please add your comments</string>
    <string name="history_added_sucessfully">History added successfully</string>
    <string name="add_history">Add History</string>
    <string name="fill_form">Please Fill the below form</string>
    <string name="contact_soon">Thank you, We will be contacted soon</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string-array name="action_titles">
        <item>@string/drive_finance</item>
        <item>@string/test_drive</item>
        <item>@string/trade_in</item>
        <item>@string/show_room</item>
    </string-array>
    <string-array name="after_sales_services_title">
        <item>@string/after_sales_service</item>
        <item>@string/spare_parts</item>
        <item>@string/trade_in</item>
        <item>@string/fixology</item>
        <item>@string/service_360</item>
        <item>@string/finance</item>

    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">Loading…</string>
    <string name="menu">Menu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
</resources>