<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:textColorHint="@color/opacity_white"
            app:hintTextAppearance="@style/TextAppearance">

            <com.spade.mazda.CustomViews.CustomEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:textColorHint="@color/opacity_white"
            app:hintTextAppearance="@style/TextAppearance">

            <com.spade.mazda.CustomViews.CustomEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:textColorHint="@color/opacity_white"
            app:hintTextAppearance="@style/TextAppearance">

            <com.spade.mazda.CustomViews.CustomEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:textColorHint="@color/opacity_white"
            app:hintTextAppearance="@style/TextAppearance">

            <com.spade.mazda.CustomViews.CustomEditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:textColorHint="@color/opacity_white"
            app:hintTextAppearance="@style/TextAppearance">

            <com.spade.mazda.CustomViews.CustomEditText
                android:id="@+id/mobile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:theme="@style/EditTextTheme" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/opacity_white"
            app:hintTextAppearance="@style/TextAppearance">

            <com.spade.mazda.CustomViews.CustomEditText
                android:id="@+id/birth_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/birth_date"
                android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>


        <com.spade.mazda.CustomViews.CustomButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center">

            <com.spade.mazda.CustomViews.CustomTextView
                android:id="@+id/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                app:fontTypeFaceStyle="gotham-regular" />

            <com.spade.mazda.CustomViews.CustomTextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_marginStart="@dimen/dp4"
                android:layout_toEndOf="@id/already_have_account"
                android:layout_toRightOf="@id/already_have_account"
                android:text="@string/sign_in"
                app:color="@color/blue" />

            <com.spade.mazda.CustomViews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_marginStart="@dimen/dp4"
                android:layout_toEndOf="@id/sign_in"
                android:layout_toRightOf="@id/sign_in"
                android:text="@string/question_mark"
                android:textColor="@color/blue" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>